# Spencer-Firmware

./: .gitignore  CMakeLists.txt  Makefile  Makefile.win  README.md  Spencer.hpp  Spencer.ino  sentences.txt
data/: .gitignore  index.html
scripts/: sentences.sh  www.sh
src/: AsyncProcessor.hpp  HardwareTest.cpp  HardwareTest.h  Net.cpp  Net.h  PreparedStatement.cpp  PreparedStatement.h  SerialID.cpp  SerialID.h  Settings.cpp  Settings.h
src/DataStream/: FileReadStream.cpp  FileReadStream.h  FileWriteStream.cpp
src/HTTPserver/: HTTPserver.cpp  HTTPserver.h
src/Intent/: BrightnessIntent.cpp  BrightnessIntent.h  FunpackInclude.hpp  Intent.hpp  IntentInfo.hpp  IntentStore.cpp  IntentStore.h  JokeIntent.cpp  JokeIntent.h  StopwatchIntent.cpp  StopwatchIntent.h  TimeIntent.cpp  TimeIntent.h  VolumeIntent.cpp  VolumeIntent.h  WeatherIntent.cpp  WeatherIntent.h
src/Intent/Funpack/: Actorsinmovie.hpp  Age.hpp  Alexa.hpp  Angrycrowd.hpp  Areyouok.hpp  Areyouskynet.hpp  Beammeupscotty.hpp  Beatbox.hpp  Bedtimestory.hpp  Believeinaliens.hpp  Believeinlove.hpp  Beyourboyfriend.hpp  Bigsby.hpp  Birdsound.hpp  Boyfriend.hpp  Buyaboat.hpp  Calldifferently.hpp  Callmom.hpp  Catsounds.hpp  Celebritycrush.hpp  Changename.hpp  Cheatcode.hpp  Chikensound.hpp  Color.hpp  Compliment.hpp  Coronavirus.hpp  Cortana.hpp  Cowsound.hpp  Creator.hpp  Cricketsound.hpp  Didyoufart.hpp  Dislike.hpp  Doabarrelroll.hpp  Dogsound.hpp  Donkeysound.hpp  Duckgeesesound.hpp  Favoritefood.hpp  Favoritekanyewestsong.hpp  Favoritesong.hpp  Favouritemovie.hpp  (+75 more)
src/LEDmatrix/: Animation.cpp  Animation.h  Font.hpp  LEDmatrix.cpp  LEDmatrix.h  gifdec.cpp  gifdec.h
src/Services/: Audio.h  SerialSetup.cpp  SerialSetup.h  UpdateChecker.cpp  UpdateChecker.h
src/Services/APILimitTracker/: APILimitTracker.cpp  APILimitTracker.h
src/Services/Audio/: Audio.cpp  Audio.h  AudioFileSourceRAM.cpp  AudioFileSourceSerialFlash.cpp  AudioFileSourceSerialFlash.h  CompositeAudioFileSource.cpp  CompositeAudioFileSource.h  I2S.cpp  I2S.h  Playback.cpp  Playback.h  Recording.cpp  Recording.h  SampleStore.cpp  SampleStore.h
src/Services/LimitTrackingService/: LimitTrackingService.cpp  LimitTrackingService.h
src/Services/LocationService/: LocationService.cpp  LocationService.h
src/Services/TimeService/: DateTime.cpp  DateTime.hpp  TimeService.cpp  TimeService.h
src/SetupServer/: SetupRequestHandler.cpp  SetupRequestHandler.h  SetupServer.cpp  SetupServer.h
src/Speech/: SpeechToIntent.cpp  SpeechToIntent.h  TextToSpeech.cpp  TextToSpeech.h
src/State/: ErrorState.cpp  ErrorState.h  IdleState.cpp  IdleState.h  IntentState.cpp  IntentState.h  ListenState.cpp  ListenState.h  ProcessState.cpp  ProcessState.h  SetupState.cpp  SetupState.h  StartupState.cpp  StartupState.h  State.cpp  State.h
src/Util/: Base64Decode.cpp  Base64Decode.h  FlashTools.cpp  FlashTools.h  StreamableHTTPClient.cpp  StreamableHTTPClient.h
www/: index.html
www/res/: script.js  style.css
